Remove google.guava dependency
The choice was between updating and replacing it. Since most of the
functionality used now exists within the Java standard library, it was
easy to replace it.