@@ -1,7 +1,5 @@
 package com.epages.readiness.sort;
 
-import com.google.common.collect.ImmutableList;
-
 import com.epages.readiness.HealthRequest;
 import com.epages.readiness.HealthResponse;
 
@@ -39,14 +37,17 @@ public class SortCompareTest {
 
         // WHEN
         Comparator<HealthResponse> comparator = sortCompare.getComparator(sort);
-        List<HealthResponse> sorted = ImmutableList.sortedCopyOf(comparator, givenHealthResponses());
+        List<HealthResponse> sorted = givenHealthResponses()
+            .stream()
+            .sorted(comparator)
+            .toList();
 
         // THEN
         then(sorted).extracting(HealthResponse::getService).containsExactly("E", "D", "C", "B", "A");
     }
 
     private List<HealthResponse> givenHealthResponses() {
-        return ImmutableList.of(
+        return List.of(
                 HealthResponse.builder().request(new HealthRequest("A", "/A")).status(UP).totalTimeMillis(1L).build(),
                 HealthResponse.builder().request(new HealthRequest("B", "/B")).status(UNKNOWN).totalTimeMillis(1L).build(),
                 HealthResponse.builder().request(new HealthRequest("C", "/C")).status(UNKNOWN).totalTimeMillis(2L).build(),
